[tool.poetry]
name = "bobuxadmin"
version = "1.0"
description = "Moderation bot for bobux bot development server"
authors = ["Exenifix"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
disnake = "^2.7.0"
aiosqlite = "^0.18.0"
exencolorlogs = "^1.1.1"
python-dotenv = "^0.21.0"
exenenv = "^1.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
isort = "^5.11.3"
ruff = "^0.0.188"
black = "^22.12.0"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
